@@ -208,6 +208,9 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       string" with "options string".
     - X2Go/Server/Agent/NX/Options.pm: replace occurrences of "option string"
       with "options string".
+    - X2Go/Server/Agent/NX/Options.pm: document that duplicate keys in the
+      input options string are possible and accepted, but actually discouraged
+      and semantically redundant.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
